fix: use display instead of visibility for click handling pasthrough

--- a/quartz/components/styles/search.scss
+++ b/quartz/components/styles/search.scss
@@ -83,10 +83,13 @@
       }
 
       & > #search-layout {
-        display: flex;
+        display: none;
         flex-direction: row;
-        visibility: hidden;
         border: 1px solid var(--lightgray);
+
+        &.display-results {
+          display: flex;
+        }
 
         @media all and (min-width: $tabletBreakpoint) {
           &[data-preview] {
